--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,7 +1,39 @@
-<div class="container middle-body">
+<div class="container middle-body" ng-controller="eventCtrl">
 	<div class="row">
 		<div class="col-xs-12 col-md-12">
-			<a class="btn btn-primary add_menu" ng-href="#">Add event</a><br><br>
+			<a class="btn btn-primary pull-right" ng-href="/events">Add event</a><br><br>
+		</div>
+	</div>
+	<hr/>
+	<div class="row">
+		<div class="col-md-10">
+			<div class="col-md-4" ng-repeat="event in events">
+				<div class="card">
+					<div class="card-block">
+						<h4 class="card-title">{{event.name}}</h4>
+						<p class="card-text">Date: {{event.date}}<br/>Location: {{event.location}}<br/>Total Amount: {{event.amount}}</p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item" ng-repeat="log in event_logs[event.id]">{{status(log, user)}}<br/><a href="#" class="card-link btn btn-xs btn-success" ng-if="!log.settled" ng-click="settled(log)">Settle</a>
+							<span ng-if="log.settled" class="card-link btn btn-xs btn-danger">Settled</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2">
+			<div class="card">
+				<div class="card-block">
+					<h4 class="card-title">User wise split</h4>
+					<p class="card-text">Total owe/lent amount per user wise</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item" ng-repeat="userlog in users">
+						You {{userlog.status}} {{userlog.name}} {{userlog.amount}}
+						<br/><a href="#" class="card-link btn btn-xs btn-success" ng-if="!log.settled" ng-click="settled_multiple(userlog)">Settle</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
