--- a/app/assets/templates/reset_password.html
+++ b/app/assets/templates/reset_password.html
@@ -2,23 +2,21 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-4 form">
 			<!-- Register -->
-			<form name="resetPasswordForm" ng-controller="ResetPassword" ng-submit="reset_password()" novalidate>
-				<div class="login-form" id="sign-up-form"> <!--Sign up form start-->
-					<div class="box1">
-						<div class="title">Reset Password</div>
-						<div class="form-group" ng-class="errorClass('password')">
+			<form name="resetPasswordForm" ng-controller="ResetPassword" ng-submit="reset_password()" class="add_margin" novalidate>
+				<div class="loginmodal-container" id="forgot-password-form">
+            <h1>Reset Password</h1><br>
+            <div class="form-group" ng-class="errorClass('password')">
 							<label>New Password</label>
 							<input type="password" class="form-control input-underline" placeholder="New Password" name="password" ng-model="reset.password" server-error />
 							<span class="help-block pull-left" ng-show="resetPasswordForm.password.$error.server">{{errors.password}}</span>
-						</div><br/>
-						<div class="form-group" ng-class="errorClass('password_confirmation')">
+						</div>
+            <div class="form-group" ng-class="errorClass('password_confirmation')">
 							<label>Password Confirmation</label>
 							<input type="password" class="form-control input-underline" placeholder="Confirm Password" name="password_confirmation" ng-model="reset.password_confirmation" server-error />
 							<span class="help-block pull-left" ng-show="resetPasswordForm.password_confirmation.$error.server">{{errors.password_confirmation}}</span>
-						</div>
-						<input type="submit" class="btn btn-sign btn-block" value="Reset Password">
-					</div>
-				</div>
+						</div><div class="login-help">
+              <input type="submit" class="btn btn-sign btn-block" value="Reset Password"></div>
+          </div>
 			</form>
 		</div>
 	</div>
