--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,6 @@
 <footer>
-  <div class="container">
-    footer
-  </div><!--/.container-->
+	<div class="row footer-color">
+		<div class="col-sm-3">SPLITWISE </div>
+		<div class="col-sm-9"><p class="pull-right">&copy; 2016. All Rights Reserved </p></div> 
+	</div>	
 </footer>
-<!--/footer-->
-
-<div class="copyright">
-  <div class="container">
-    <div class="col-xs-12 col-md-12">
-      <p class="pull-right">&copy; 2014. All Rights Reserved </p>
-    </div><!--/.col-md-12-->
-  </div>
-  <!--/.container-->
-</div>
-<!--/.copyright--->
